# GaltonBoard

./: .gitignore  Biased_Galton_Board.ipynb  NoiseModel.ipynb  Peg_order.ipynb  QuantumGaltonBoard.ipynb  README.md  pixi.toml  pyproject.toml
data/raw/: ideal_obs_probs_levels2_shots1000_sims100.npz  ideal_obs_probs_levels3_shots1000_sims100.npz  ideal_obs_probs_levels5_shots1000_sims100.npz  ideal_obs_probs_levels6_shots1000_sims100.npz  noisy_obs_probs_levels2_shots1000_sims100.npz  noisy_obs_probs_levels3_shots1000_sims100.npz  obs_counts_levels9_shots10000_sims1000.csv
notebooks/: Biased_Galton_Board.ipynb  QuantumGaltonBoard.ipynb
notebooks/Exploratory/: Error_value.ipynb  NoiseModel.ipynb  Noisy_Circuits.ipynb  Parameter_learning_proof_of_concept.ipynb  Peg_order.ipynb  QAOA_layer.ipynb  QAOA_networkx.ipynb  QAOA_pennylane.ipynb  QAOA_qiskit.ipynb
notebooks/Results/: Quantum Walks and Monte Carlo.ipynb
notebooks/Showcase/: Biased_Galton_Board.ipynb
outputs/ideal_obs_probs_levels2_shots1000_sims100/models/: FeedForwardNN_test_predictions.npz  FeedForwardNN_train_losses.npz  FeedForwardNN_weights.pt
src/: main.py
src/GaltonBoard.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
src/circuit/: gates.py  noise_model.py  quantum_galton_board.py
src/config/: config.yaml
src/config/circuit/: ideal.yaml  noisy.yaml
src/data/: data_classes.py  dist_sample.py  make_dataset.py
src/models/: metrics.py  model_run.py  neural_nets.py  qaoa.py  train.py
src/utils/: metrics.py  misc.py  plot_utils.py
utils/: qalton.py
(+81 files in other folders)
